# noodles

noodles-bam/: Cargo.toml
noodles-bam/benches/: bam_cigar_bench.rs
noodles-bam/src/record/codec/: decoder.rs  encoder.rs
noodles-bam/src/record/codec/decoder/: cigar.rs
