[package]
authors = ["Michael Macias <zaeleus@gmail.com>"]
description = "Binary Alignment/Map (BAM) format reader and writer"
documentation = "https://docs.rs/noodles-bam"
edition.workspace = true
homepage = "https://github.com/zaeleus/noodles"
license.workspace = true
name = "noodles-bam"
repository = "https://github.com/zaeleus/noodles"
rust-version = "1.64.0"
version = "0.46.0"

[features]
async = ["dep:futures", "dep:tokio", "noodles-bgzf/async"]

[dependencies]
bit-vec.workspace = true
byteorder.workspace = true
bytes.workspace = true
futures = {workspace = true, optional = true, features = ["std"]}
tokio = {workspace = true, optional = true, features = ["fs", "io-util"]}

noodles-bgzf = {path = "../noodles-bgzf", version = "0.24.0"}
noodles-core = {path = "../noodles-core", version = "0.12.0"}
noodles-csi = {path = "../noodles-csi", version = "0.24.0"}
noodles-sam = {path = "../noodles-sam", version = "0.43.0"}

[dev-dependencies]
criterion = "0.5.1"
noodles-sam = {path = "../noodles-sam", version = "0.43.0", features = ["async"]}
rand = "0.8.4"
tokio = {workspace = true, features = ["io-std", "macros", "rt-multi-thread"]}

[[bench]]
harness = false
name = "bam_cigar_bench"

[package.metadata.docs.rs]
features = ["async"]

[[example]]
name = "bam_count_async"
required-features = ["async"]

[[example]]
name = "bam_idxstats_async"
required-features = ["async"]

[[example]]
name = "bam_query_async"
required-features = ["async"]

[[example]]
name = "bam_read_header_async"
required-features = ["async"]

[[example]]
name = "bam_reheader_async"
required-features = ["async"]

[[example]]
name = "bam_view_async"
required-features = ["async"]

[[example]]
name = "bam_write_async"
required-features = ["async"]
